# sentence_distance_DTW

./: .gitignore  _new_line.py  bleu.py  comp_dim.py  dtw_sample.py  ginza_tokenfile.py  ginza_tokenizer.py  load_model.py  log.txt  mecab_tokenfile.py  mecab_tokenizer.py  mk_html.py  mk_pseudocorpus.py  mk_tfdataset.py  mk_tsv.py  ot_sample.py  plot_distance.py  plot_dtw.py  preproc.py  pyproject.toml  sen_to_vec.py  show_pca.py  train_w2v.py  wmd.py
data/: corpus.txt  easy.txt  out_tokenizer.txt  pca3.csv
data/easy/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+997 more)
data/news/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+996 more)
eval/: bleu.py  calc_eval.py  sim.py
eval/T5/: T5_25.csv  T5_75.csv  eval_25.csv
graph/: log.txt
out2/: dev.tsv  raw_sentence_dist_dataset.csv  test.tsv  train.tsv
out_25/: dev.tsv  raw_sentence_dist_dataset.csv  test.tsv
out_75/: dev.tsv  test.tsv  train.tsv
out_biDirectional/: raw_sentence_dist_dataset.csv
(+3 files in other folders)
