[tool.poetry]
name = "sentence_distance_dtw"
version = "0.1.0"
description = ""
authors = ["ermk006 <eri.maekawa@mulabo.org>"]

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.2.0"
pandas = "^1.4.2"
mecab-python3 = "^1.0.5"
mojimoji = "^0.0.12"
beautifulsoup4 = "^4.11.1"
sklearn = "^0.0"
fastdtw = "^0.3.4"
matplotlib = "^3.5.2"
ginza = "^5.1.1"
ja-ginza = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
